--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,6 +1,6 @@
 .card {
   margin: 15px;
-  width: 190px;
+  width: 200px;
   height: 254px;
   cursor: pointer;
   /* border-radius: 30px; */
@@ -11,6 +11,7 @@
 
 
 .name {
+  width: 200px;
   text-align: center;
   background-color: var(--colorFondo2);
   height: 25px;
@@ -37,14 +38,17 @@
 .img {
   overflow: hidden;
   margin: 0;
+  width: 200px;
+  height: 200px;
 }
 
 .img img {
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: 100%;
+  display: block;
   margin: 0;
   padding: 0;
-  border-radius: 12px;
+  /* border-radius: 12px; */
   transition-duration: 0.8s;
 }
 
