--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -1,4 +1,13 @@
+:root {
+  --colorBoton1: var(--color4);
+  --colorBoton2: var(--color3);
+  --colorLetraBoton: #fafbfb;
+
+}
+
+
 .producto-card {
+  width: 100%;
   margin: auto auto;
   padding: 1rem;
   display: flex;
@@ -8,12 +17,6 @@
   justify-content: space-between;
 }
 
-:root{
-  --colorBoton1: var(--color4);
-  --colorBoton2: var(--color3);
-  --colorLetraBoton: #fafbfb;
-
-}
 
 .producto-img,
 .producto-info {
@@ -30,28 +33,33 @@
 .producto-info #nombre {
   font-size: 3rem;
 }
+
 .producto-info #categoria {
   text-align: left;
 }
+
 .producto-info #precio {
   text-align: right;
   font-size: 1.5rem;
 }
+
 .producto-info #descripcion {
   padding: 1rem;
   font-size: 1.1rem;
 }
+
 .producto-info #rating {
   text-align: center;
   padding: 1rem;
 }
 
-.add-carrito{
+.add-carrito {
   margin: 1rem auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .button {
   position: relative;
   width: 150px;
@@ -63,16 +71,20 @@
   background-color: var(--colorBoton2);
   font-family: inherit;
   border-radius: 2px;
-  /* letter-spacing: 1px; */
 }
-.button, .button__icon, .button__text {
+
+.button,
+.button__icon,
+.button__text {
   transition: all 0.3s;
 }
+
 .button .button__text {
   transform: translateX(10px);
   color: var(--colorLetraBoton);
   font-size: 1.1rem;
 }
+
 .button .button__icon {
   position: absolute;
   transform: translateX(109px);
@@ -83,34 +95,79 @@
   align-items: center;
   justify-content: center;
 }
+
 .button .svg {
   width: 30px;
   stroke: var(--colorLetraBoton);
 }
+
 .button:hover {
   background: var(--colorBoton1);
 }
+
 .button:hover .button__text {
   color: transparent;
 }
+
 .button:hover .button__icon {
   width: 148px;
   transform: translateX(0);
 }
+
 .button:active .button__icon {
   background-color: var(--colorBoton2);
 }
+
 .button:active {
   border: 1px solid var(--colorBoton2);
 }
 
-.waiting{
+.waiting {
   padding: 3rem;
 }
-/* nombre categoria descripcion precio rating */
+
+
+/* *************************************************************************************************************************************************************** */
 
 @media (max-width: 750px) {
+
   .producto-card {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
   }
+
+  .producto-img,
+  .producto-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .producto-imagen {
+    width: 90%;
+    height: auto;
+  }
+
+  .producto-info #nombre {
+    margin: 10px;
+    width: 90%;
+    font-size: 2rem;
+  }
+
+  .producto-info #precio {
+    font-size: 1rem;
+  }
+
+  .producto-info #descripcion {
+    font-size: 1rem;
+    width: 90%;
+  }
+
 }
