--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,5 +1,4 @@
-
-<div class="grid-area">
+<div class="main-area">
 
   <div class="lista">
     <div class="encabezado">
@@ -8,28 +7,31 @@
     </div>
 
     <div class="relacion-productos">
-      <div class="producto" *ngFor="let item of cart" >
+
+
+      <div class="producto" *ngFor="let item of cart">
         <div class="imagen-producto">
-          <img
-            [src]="item.product.image"
-            [alt]="item.product.title"
-          />
+          <img [src]="item.product.image" [alt]="item.product.title" />
         </div>
 
         <div class="info-producto">
           <div class="detalles">
-            <div class="name" >{{item.product.title}}</div>
-            <div class="info">{{item.product.description}}
+            <div class="name">
+              {{item.product.title}}
             </div>
+
           </div>
           <div class="numeros">
             <div class="price">{{item.product.price |currency:'EUR'}}</div>
-            <input type="number" name="cantidad" id="cantidad" [(ngModel)]="item.quantity" (change)="modifyQuantity()" />
+            <input type="number" name="cantidad" id="cantidad" [(ngModel)]="item.quantity"
+              (change)="modifyQuantity()" />
             <p>Total</p>
             <div class="total">{{item.product.price * item.quantity | currency:'EUR'}}</div>
           </div>
         </div>
       </div>
+
+
     </div>
   </div>
 
@@ -54,8 +56,8 @@
     </div>
 
     <div class="resumen-comprar">
-      <button class="comprar-btn" (click)="shopNow()" >Comprar ahora</button>
-      <button class="comprar-btn eliminar" (click)="deleteAll()" >Eliminar productos</button>
+      <button class="comprar-btn" (click)="shopNow()">Comprar ahora</button>
+      <button class="comprar-btn eliminar" (click)="deleteAll()">Eliminar productos</button>
     </div>
   </div>
 </div>
