--- a/src/app/shared/sub/dark-mode/dark-mode.component.css
+++ b/src/app/shared/sub/dark-mode/dark-mode.component.css
@@ -4,6 +4,8 @@
   margin: 0 0.5rem;
   padding: 0.5rem;
   cursor: pointer;
+  transition: 0.3s;
+
 }
 .iconosDarkMode:hover {
   /* From https://css.glass */
