--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -3,22 +3,18 @@
   width: 200px;
   height: 254px;
   cursor: pointer;
-  /* border-radius: 30px; */
-  /* background: #e0e0e0; */
-  /* box-shadow: -15px -15px -30px #bebebe,
-    -15px -15px -30px #ffffff; */
 }
-
 
 .name {
   width: 200px;
   text-align: center;
-  background-color: var(--colorFondo2);
   height: 25px;
   padding-top: 4px;
-  color: var(--colorLetra3);
+  color: var(--colorLetra1);
   margin: 0;
   overflow: hidden;
+  border-radius: 2px;
+  font-weight: 650;
 }
 
 .price {
@@ -26,8 +22,7 @@
   padding-left: 10px;
   display: block;
   width: 100%;
-  color: var(--colorLetra2);
-  font-weight: 650;
+  color: var(--colorLetra1);
 }
 
 .info {
@@ -48,7 +43,6 @@
   display: block;
   margin: 0;
   padding: 0;
-  /* border-radius: 12px; */
   transition-duration: 0.8s;
 }
 
