--- a/src/app/shared/aside/aside.component.css
+++ b/src/app/shared/aside/aside.component.css
@@ -10,11 +10,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  border-right: 1px solid var(--colorFondo2);
+  border-right: 1px solid var(--color4);
 }
 
 .lateral .item-lateral {
-  /* border: 2px solid black; */
   padding-bottom: 0.5rem;
   margin: 0.5rem auto;
   width: 120px;
@@ -30,7 +29,7 @@
 }
 
 .lateral .item-lateral:not(:last-of-type)  {
-  border-bottom: 1px solid var(--colorFondo2);
+  border-bottom: 1px solid var(--color3);
 }
 
 .lateral .item-lateral .img-lateral {
