--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,16 +1,10 @@
 /** -------------- Zona superior --- Header ------------- **/
 
 header {
-  background: radial-gradient(
-    circle,
-    var(--color1),
-    var(--color2),
-    var(--color3),
-    var(--color4),
-    var(--color5)
-  );
+  background: var(--color1);
+  background: linear-gradient(90deg, var(--color1) 0%, var(--color2) 61%);
 
-  height: 8vh;
+  height: 9vh;
   max-height: 100px;
   width: 100%;
   display: flex;
@@ -24,6 +18,7 @@ header h1 {
   text-align: left;
   margin-left: 5rem;
 }
+
 header h1 a {
   text-decoration: none;
   color: var(--colorLetra1);
@@ -36,6 +31,7 @@ header h1 a {
   height: 45%;
   transition: 0.3s;
 }
+
 .login a {
   cursor: pointer;
   height: 100%;
@@ -45,21 +41,23 @@ header h1 a {
   align-items: center;
   justify-content: center;
 }
+
 .login a img {
   width: 1.5rem;
-  /* font-size: 2rem; */
   color: var(--colorLetra1);
 }
+
 .login a p {
   text-align: left;
   margin-left: 0.5rem;
   color: var(--colorLetra1);
   align-self: center;
 }
+
 .login:hover,
 .login:hover::before {
   /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.2);
+  background:  rgba(255, 255, 255, 0.2);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
@@ -70,6 +68,7 @@ header h1 a {
   header {
     height: 8vh;
   }
+
   header h1 {
     margin-left: 2rem;
   }
@@ -79,9 +78,11 @@ header h1 a {
     width: 35px;
     min-width: 35px;
   }
+
   .login a {
     height: 100%;
   }
+
   .login a p {
     display: none;
   }
