--- a/src/app/shared/menu/menu.component.css
+++ b/src/app/shared/menu/menu.component.css
@@ -2,7 +2,7 @@
 /* **************************** Menu   *************************** */
 /* **************************** ****** *************************** */
 .menu {
-  background: var(--colorFondo3);
+  background: var(--color2);
   width: 100%;
   height: 5vw;
   min-height: 50px;
@@ -50,14 +50,14 @@
 }
 
 .menu .categorias li a:hover {
-  background-color: var(--colorFondo4);
-  color: var(--colorLetra2);
+  background-color: var(--color1);
+  color: var(--colorLetra1);
   border-radius: 5px;
 }
 
 .activeCategory {
   border-radius: 5px;
-  border: 10px solid var(--colorFondo4);
+  border: 10px solid var(--color1);
 }
 
 
@@ -96,6 +96,7 @@
 
 .btn-carrito img {
   color: var(--colorLetra1);
+  /* TODO: colorear SVG  */
   height: 70%;
   width: 70%;
   transition: rotate 0.3s ease;
@@ -109,14 +110,14 @@
   position: absolute;
   top: 0;
   left: 60%;
-  background: red;
+  background: var(--colorBadge);
   width: 1.5rem;
   height: 1.5rem;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: baseline;
-  color: var(--colorLetra3);
+  color: var(--colorLetra2);
   padding: 2px;
   font-size: 0.8rem;
   font-weight: bold;
@@ -160,7 +161,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    background-color: var(--colorFondo3);
+    background-color: var(--color2);
   }
 
   .desplegarBoton {
@@ -174,6 +175,7 @@
 
   .desplegarBoton img {
     width: 10%;
+    /* TODO: colorear SVG */
   }
 
   .categoriasDesplegable {
@@ -244,7 +246,7 @@
     border: 0;
     font-size: 0.7rem;
     text-align: center;
-    color: var(--colorLetra4);
+    color: var(--colorLetra2);
     font-style: italic;
   }
 
@@ -273,14 +275,14 @@
     position: absolute;
     top: 0;
     left: 75%;
-    background: red;
+    background: var(--colorBadge);
     width: 0.7rem;
     height: 0.7rem;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    color: var(--colorLetra3);
+    color: var(--colorLetra2);
     padding: 2px;
     font-size: 0.6rem;
   }
