--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,8 +14,8 @@
       <button type="submit">Send</button>
 
       <ul class="validations">
-        <li *ngIf="invalidField('username')">username obligatorio</li>
-        <li *ngIf="invalidField('password')">Password obligatorio</li>
+        <li *ngIf="invalidField('username')">Username required</li>
+        <li *ngIf="invalidField('password')">Password required</li>
       </ul>
     </form>
   </div>
