--- a/src/app/shared/sub/dark-mode/dark-mode.component.css
+++ b/src/app/shared/sub/dark-mode/dark-mode.component.css
@@ -19,9 +19,9 @@
   justify-content: center;
   align-items: center;
 }
-.iconosDarkMode .iconoDark img {
+.iconosDarkMode .iconoDark svg {
   width: 1.2rem;
   font-size: 1.2rem;
-  color: var(--colorLetra4);
+  fill: var(--colorLetra1);
 }
 
