--- a/src/app/shared/sub/dark-mode/dark-mode.component.html
+++ b/src/app/shared/sub/dark-mode/dark-mode.component.html
@@ -1,13 +1,15 @@
 <div class="iconosDarkMode" (click)="toggleDarkMode()">
-  
+
   <ng-container *ngIf="isDarkMode; else elseTemplate">
     <div class="iconoDark">
-      <img src="../../../assets/svg/moon-sharp.svg" alt="">
+      <!-- <img src="../../../assets/svg/moon-sharp.svg" alt=""> -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path d="M152.62 126.77c0-33 4.85-66.35 17.23-94.77C87.54 67.83 32 151.89 32 247.38 32 375.85 136.15 480 264.62 480c95.49 0 179.55-55.54 215.38-137.85-28.42 12.38-61.8 17.23-94.77 17.23-128.47 0-232.61-104.14-232.61-232.61z"/></svg>
     </div>
   </ng-container>
   <ng-template #elseTemplate>
     <div class="iconoDark ">
-      <img src="../../../assets/svg/sunny-sharp.svg" alt="">
+      <!-- <img src="../../../assets/svg/sunny-sharp.svg" alt=""> -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path d="M234 26h44v92h-44zM234 394h44v92h-44zM338.025 142.857l65.054-65.054 31.113 31.113-65.054 65.054zM77.815 403.074l65.054-65.054 31.113 31.113-65.054 65.054zM394 234h92v44h-92zM26 234h92v44H26zM338.029 369.14l31.112-31.113 65.054 65.054-31.112 31.112zM77.802 108.92l31.113-31.113 65.054 65.054-31.113 31.112zM256 358a102 102 0 11102-102 102.12 102.12 0 01-102 102z"/></svg>
     </div>
   </ng-template>
 
