color boton arriba darkmode

--- a/src/app/components/up-button/up-button.component.css
+++ b/src/app/components/up-button/up-button.component.css
@@ -32,10 +32,8 @@
 .button-arriba .btnArriba .icono {
   width: 50px;
   font-size: 2rem;
-  fill: var(--colorLetra1);
-  /* TODO: comprobar que sale bien */
+  color: var(--colorBotonArriba);
 }
-
 
 .shows {
   animation: popup 0.5s ease-in-out;
