--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -56,9 +56,13 @@
 /* *************************************************************************************************************************************************************** */
 
 @media (max-width: 750px) {
+  .contenedor{
+    width: 100vw;
+    overflow: hidden;
+  }
 
   .producto-card {
-    width: 100%;
+    width: 90%;
     margin: 0;
     padding: 0;
     display: flex;
@@ -70,6 +74,7 @@
 
   .producto-img,
   .producto-info {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -84,11 +89,11 @@
   .producto-info #nombre {
     margin: 10px;
     width: 90%;
-    font-size: 2rem;
+    font-size: 1.2rem;
   }
 
   .producto-info #precio {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
 
   .producto-info #descripcion {
