--- a/src/app/shared/aside/aside.component.css
+++ b/src/app/shared/aside/aside.component.css
@@ -13,11 +13,14 @@
   border-right: 1px solid var(--color4);
 }
 
+.lateral h5{
+  margin: 10px;
+}
+
 .lateral .item-lateral {
   padding-bottom: 0.5rem;
   margin: 0.5rem auto;
   width: 120px;
-  height: 120px;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -32,12 +35,13 @@
   border-bottom: 1px solid var(--color3);
 }
 
-.lateral .item-lateral .img-lateral {
+.lateral .item-lateral img {
   overflow: hidden;
 }
 
 .lateral .item-lateral img {
   width: 100%;
+  height: auto;
 }
 
 
@@ -45,7 +49,8 @@
   .lateral {
     position: sticky;
     top: 0;
-    margin: 0 auto;
+    left: 0;
+    width: 100vw;
     height: 17vh;
     display: flex;
     flex-direction: row;
@@ -56,19 +61,17 @@
 
   .lateral .item-lateral {
     flex: 0 0 auto;
-    width: 40%;
+    width: auto;
     margin: 2% 5%;
     height: 15vh;
   }
 
-  .lateral .item-lateral .img-lateral {
-    height: 70%;
+  .lateral .item-lateral img {
+    height: 100%;
+    width: auto;
     overflow: hidden;
     display: flex;
     justify-content: center;
   }
 
-  .lateral .item-lateral .price {
-    display: none;
-  }
 }
