--- a/src/app/pages/shopping-cart/shopping-cart.component.css
+++ b/src/app/pages/shopping-cart/shopping-cart.component.css
@@ -237,7 +237,7 @@
   }
 
   .imagen-producto {
-    width: 100%;
+    width: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
