--- a/src/app/shared/error404/error404.component.html
+++ b/src/app/shared/error404/error404.component.html
@@ -1,1 +1,12 @@
-<p>error404 works!</p>
+<div class="container">
+
+  <div class="text">
+    <p>Sorry, we can't find what you're looking for...</p>
+    <a [routerLink]="['/home']" >...back to the store?</a>
+  </div>
+  <div class="gif">
+    <iframe src="https://giphy.com/embed/VnKkglxCbWsg6CLHtR" width="100%" height="100%" frameBorder="0"
+      class="giphy-embed" allowFullScreen>
+    </iframe>
+  </div>
+</div>
