debounced search complete

--- a/src/app/shared/sub/search/search.component.html
+++ b/src/app/shared/sub/search/search.component.html
@@ -1,23 +1,23 @@
 <div
   class="buscar"
-  (ngSubmit)="search()"
   [ngClass]="{'buscarActive': biggerInput}">
 
   <input
-   type="text"
+    id="searchInput"
+    type="text"
     class="input"
     placeholder="Find your next purchase..."
-    (keyup.enter)="search()"
     #txtSearchInput
+    (keyup)="onKeyPress(txtSearchInput.value)"
     name="searchInput"
   />
 
   <button
    type="button"
    class="btn-buscar"
-   (click)="focusOnSearch()"
+   (click)="changeInputVisibility()"
   >
-    <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"/><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M338.29 338.29L448 448"/></svg>
+    <svg id="searchButton" xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"/><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M338.29 338.29L448 448"/></svg>
   </button>
 
 </div>
